--- a/index.ipynb
+++ b/index.ipynb
@@ -255,6 +255,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries.append('Thailand')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
